Add profile and group media support
