# src/modules/profile/dto/request-profile-image-upload.dto.ts
@@ -1,0 +1,3 @@
+import { RequestDiaryPhotoUploadDto } from '../../diary/dto/request-diary-photo-upload.dto';
+
+export class RequestProfileImageUploadDto extends RequestDiaryPhotoUploadDto {}
